--- a/about.html
+++ b/about.html
@@ -66,18 +66,18 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="services.html">Services</a></li>
-							<li><a href="work.html">Work</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li class="active"><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="index.html">Домой</a></li>
+							<li><a href="services.html">Услуги</a></li>
+							<li><a href="work.html">Работы</a></li>
+							<li><a href="blog.html">Блог</a></li>
+							<li class="active"><a href="about.html">Обо мне</a></li>
+							<li><a href="contact.html">Контакты</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
+						<h2 class="head-title">Работы</h2>
 						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
@@ -112,7 +112,7 @@
 		<div id="colorlib-about">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">About</h2>
+					<h2 class="bold">Обо мне</h2>
 				</div>
 				<div class="row row-padded-bottom">
 					<div class="col-md-5 animate-box">
@@ -120,19 +120,20 @@
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box">
 						<div class="about-desc">
-							<h2><span>Noah</span><span>Henderson</span></h2>
+							<h2><span>Любовь</span><span>Вербицкая</span></h2>
 							<div class="desc">
 								<div class="rotate">
-									<h2 class="heading">About</h2>
+									<h2 class="heading">обо мне</h2>
 								</div>
-								<p>A small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+								<p>Образование:Государственное бюджетное профессиональное учреждение города
+Москвы «Московский издательско-полиграфический колледж им. И. Фёдорова»</p>
+								<p>Специальность: издательское дело</p>
+								<p>Квалификация: редактор</p>
 								<p class="colorlib-social-icons">
-									<a href="#"><i class="icon-facebook4"></i></a>
-									<a href="#"><i class="icon-twitter3"></i></a>
-									<a href="#"><i class="icon-googleplus"></i></a>
+==									<a href="#"><i class="icon-googleplus"></i></a>
 									<a href="#"><i class="icon-dribbble2"></i></a>
 								</p>
-								<p><a href="work.html" class="btn btn-primary btn-outline">View My Works</a></p>
+								<p><a href="work.html" class="btn btn-primary btn-outline">Мои работы</a></p>
 							</div>
 						</div>
 					</div>
