--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
 							<h2><span>Любовь</span><span>Вербицкая</span></h2>
 							<div class="desc">
 								<div class="rotate">
-									<h2 class="heading">обо мне</h2>
+									<h2 class="heading">Обо мне</h2>
 								</div>
 								<p>Образование:Государственное бюджетное профессиональное учреждение города
 Москвы «Московский издательско-полиграфический колледж им. И. Фёдорова»</p>
