--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 						<div class="about-desc">
 							<div class="owl-carousel3">
 								<div class="item">
-									<h2><span>Noah</span><span>Henderson</span></h2>
+									<h2><span>Любовь</span><span>Вербицкая</span></h2>
 								</div>
 								<div class="item">
-									<h2><span>I'm</span><span>A Designer</span></h2>
+									<h2><span>Я — </span><span>Редактор</span></h2>
 								</div>
 							</div>
 							<div class="desc">
@@ -146,7 +146,7 @@
 									<a href="#"><i class="icon-googleplus"></i></a>
 									<a href="#"><i class="icon-dribbble2"></i></a>
 								</p>
-								<p><a href="#" class="btn btn-primary btn-outline">Contact Me!</a></p>
+								<p><a href="#" class="btn btn-primary btn-outline">Связь со мной</a></p>
 							</div>
 						</div>
 					</div>
