--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>куууууууууууA small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+								<p>ОдеждаA small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
 								<p class="colorlib-social-icons">
 									<a href="#"><i class="icon-facebook4"></i></a>
 									<a href="#"><i class="icon-twitter3"></i></a>
