--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="services.html">Services</a></li>
-							<li><a href="work.html">Work</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li class="active"><a href="index.html">Домой</a></li>
+							<li><a href="services.html">Навыки и умения</a></li>
+							<li><a href="work.html">Работы</a></li>
+							<li><a href="blog.html">Блог</a></li>
+							<li><a href="about.html">Обо мне</a></li>
+							<li><a href="contact.html">Контакты</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
+						<h2 class="head-title">Работы</h2>
 						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
@@ -112,7 +112,7 @@
 		<div id="colorlib-about">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">About</h2>
+					<h2 class="bold">Обо мне</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-5 animate-box">
@@ -132,17 +132,15 @@
 									<h2><span>Любовь</span><span>Вербицкая</span></h2>
 								</div>
 								<div class="item">
-									<h2><span>Я — </span><span>Редактор</span></h2>
+									<h2><span>Я — </span><span>Дазийнер-верстальщик</span></h2>
 								</div>
 							</div>
 							<div class="desc">
 								<div class="rotate">
-									<h2 class="heading">About</h2>
+									<h2 class="heading">Обо мне</h2>
 								</div>
-								<p>ОдеждаA small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+								<p>Начинающий специалист в сфере верстки, редактуры и дизайна. Увлекаюсь чтением произведений по направлениям модернизм, антиутопия. Трудолюбивая, целеустремленная, терпеливая. Ответственно отношусь к поставленным задачам и работе.</p>
 								<p class="colorlib-social-icons">
-									<a href="#"><i class="icon-facebook4"></i></a>
-									<a href="#"><i class="icon-twitter3"></i></a>
 									<a href="#"><i class="icon-googleplus"></i></a>
 									<a href="#"><i class="icon-dribbble2"></i></a>
 								</p>
@@ -156,7 +154,7 @@
 		<div id="colorlib-services">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Services</h2>
+					<h2 class="bold">Навыки и умения</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
@@ -164,55 +162,36 @@
 							<div class="one-third">
 								<div class="row">
 									<div class="col-md-12 col-md-offset-0 animate-box intro-heading">
-										<span>My Services</span>
-										<h2>Here Are Some of My Skills</h2>
+										<span>Мои навыки и умения</span>
+										<h2>Профессиональные умения</h2>
 									</div>
 								</div>
 								<div class="row">
 									<div class="col-md-12">
 										<div class="rotate">
-											<h2 class="heading">Services</h2>
+											<h2 class="heading">Навыки и умения</h2>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>1 - Graphic Design</h3>
-											<ul>
-												<li>UI Design</li>
-												<li>Website &amp; Digital Design</li>
-												<li>Brading &amp; Visual Identity</li>
-												<li>Print Design</li>
+											<h3>1 - Верстка</h3>
+											<ul>												
+												<li>Компьютерная верстка, графика</li>
+												<li>Редакторская подготовка изданий</li>
+												<li>Мультимедийные технологии в издательском деле</li>
+												<li>Работать в разных компьютерных программах (Adobe, Microsoft)</li>
+												<li>Создание векторной графики</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>3 - Front End Development</h3>
+											<h3>3 - Редактура</h3>
 											<ul>
-												<li>HTML / CSS</li>
-												<li>JS &amp; Jquery Startup</li>
-												<li>WordPress</li>
-												<li>Jomla</li>
+												<li>Создание SEO-текстов</li>												<li>Основы создания веб-сайтов</li>
+												<li>Правила написания статей и материалов, выполнения рерайта, копирайта</li>
 											</ul>
 										</div>
 									</div>
-									<div class="col-md-6">
-										<div class="services animate-box">
-											<h3>2 - Illustration</h3>
-											<ul>
-												<li>Editorial</li>
-												<li>Narrative</li>
-												<li>Motion Graphics</li>
-												<li>Animation</li>
-												<li>Visual Effects</li>
-											</ul>
-										</div>
-										<div class="services animate-box">
-											<h3>4 - Web Marketing</h3>
-											<ul>
-												<li>Sales Marketing</li>
-												<li>Invoice</li>
-												<li>eCommerce</li>
-											</ul>
-										</div>
+									
 									</div>
 								</div>
 							</div>
@@ -227,18 +206,18 @@
 		<div id="colorlib-work">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Works</h2>
+					<h2 class="bold">Работы</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Portfolio</span>
+						<span>Портфолио</span>
 						<h2>Done Projects</h2>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="rotate">
-							<h2 class="heading">Portfolio</h2>
+							<h2 class="heading">Портфолио</h2>
 						</div>
 					</div>
 				</div>
