--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 									<h2><span>Любовь</span><span>Вербицкая</span></h2>
 								</div>
 								<div class="item">
-									<h2><span>Я — </span><span>Дазийнер-верстальщик</span></h2>
+									<h2><span>Я — Дизайнер-верстальщик</span></h2>
 								</div>
 							</div>
 							<div class="desc">
@@ -180,14 +180,20 @@
 												<li>Редакторская подготовка изданий</li>
 												<li>Мультимедийные технологии в издательском деле</li>
 												<li>Работать в разных компьютерных программах (Adobe, Microsoft)</li>
-												<li>Создание векторной графики</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>3 - Редактура</h3>
+											<h3>2 - Редактура</h3>
 											<ul>
 												<li>Создание SEO-текстов</li>												<li>Основы создания веб-сайтов</li>
 												<li>Правила написания статей и материалов, выполнения рерайта, копирайта</li>
+											</ul>
+										</div>
+										<div class="services animate-box">
+											<h3>3 - Дизайн</h3>
+											<ul>
+												<li>Создание векторной графики</li>												<li>Основы создания веб-сайтов</li>
+												<li>Подготовка видео- и аудиопродукта, базовые навыки в съемке и монтаже</li>
 											</ul>
 										</div>
 									</div>
@@ -211,7 +217,7 @@
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
 						<span>Портфолио</span>
-						<h2>Done Projects</h2>
+						<h2>Работы</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -227,14 +233,12 @@
 							<a href="work.html" class="work-img" style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Pursuing Best</h2>
+										<h2>Книга о вкусной и здоровой пище</h2>
 									</div>
 								</div>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
+								<div class="desc">									
 								</div>
 							</div>
 						</div>
