--- a/index.html
+++ b/index.html
@@ -248,16 +248,10 @@
 							<a href="work.html" class="work-img" style="background-image: url(images/work-2.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Coordinates</h2>
+										<h2>Внешнее оформление</h2>
 									</div>
 								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View Details</a></p>
-								</div>
-							</div>
+							</a>							
 						</div>
 					</div>
 					<div class="col-md-12">
@@ -265,16 +259,10 @@
 							<a href="work.html" class="work-img" style="background-image: url(images/work-3.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Cristall</h2>
+										<h2>Ароматерапия: ароматы и масла</h2>
 									</div>
 								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
-								</div>
-							</div>
+							</a>							
 						</div>
 					</div>
 					<div class="col-md-12">
@@ -282,16 +270,10 @@
 							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Black</h2>
+										<h2>Океаны</h2>
 									</div>
 								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
-								</div>
-							</div>
+							</a>							
 						</div>
 					</div>
 				</div>
@@ -301,18 +283,18 @@
 		<div id="colorlib-blog">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Blog</h2>
+					<h2 class="bold">Блог</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Blog</span>
-						<h2>Read Our Case</h2>
+						<span>Блог</span>
+						<h2>Больше информации</h2>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="rotate">
-							<h2 class="heading">Our Blog</h2>
+							<h2 class="heading">Мой блог</h2>
 						</div>
 					</div>
 				</div>
@@ -380,18 +362,18 @@
 		<div id="colorlib-testimony">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Testimonies</h2>
+					<h2 class="bold">Воспоминания</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Testimonies</span>
-						<h2>Clients Says</h2>
+						<span>Воспоминания</span>
+						<h2>Моя любимая фраза</h2>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="rotate">
-							<h2 class="heading">Says</h2>
+							<h2 class="heading">Фраза</h2>
 						</div>
 					</div>
 				</div>
@@ -401,8 +383,7 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-										<span>" &mdash; George Brooks</span>
+										<p>"Лучше умереть, чем жить без страсти</p>										
 									</blockquote>
 								</div>
 							</div>
