--- a/index.html
+++ b/index.html
@@ -383,31 +383,11 @@
 							<div class="col-md-12 text-center">
 								<div class="testimony">
 									<blockquote>
-										<p>"Лучше умереть, чем жить без страсти</p>										
+										<p>"Лучше умереть, чем жить без страсти"</p>										
 									</blockquote>
 								</div>
 							</div>
-						</div>
-						<div class="item">
-							<div class="col-md-12 text-center">
-								<div class="testimony">
-									<blockquote>
-										<p>"Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-										<span>" &mdash; Daniel Foster</span>
-									</blockquote>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="col-md-12 text-center">
-								<div class="testimony">
-									<blockquote>
-										<p>"When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
-										<span>" &mdash; Liam Jenkins</span>
-									</blockquote>
-								</div>
-							</div>
-						</div>
+						</div>						
 					</div>
 				</div>
 			</div>
@@ -420,7 +400,7 @@
 						<div class="col-md-4 col-pb-sm">
 							<div class="row">
 								<div class="col-md-10">
-									<h2>Let's Talk</h2>
+									<h2>Давайте поговорим</h2>
 									<p>A small river named Duden flows by their place and supplies.</p>
 									<p><a href="#">noah@info.com</a></p>
 									<p class="colorlib-social-icons">
@@ -457,7 +437,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 col-pb-sm">
-							<h2>Newsletter</h2>
+							<h2>Письмо с предложением</h2>
 							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
 							<div class="subscribe text-center">
 								<div class="form-group">
