--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 									<h2><span>Любовь</span><span>Вербицкая</span></h2>
 								</div>
 								<div class="item">
-									<h2><span>Я — Дизайнер-верстальщик</span></h2>
+									<h2><span>Дизайнер-</span><span>верстальщик</span></h2>
 								</div>
 							</div>
 							<div class="desc">
@@ -179,25 +179,27 @@
 												<li>Компьютерная верстка, графика</li>
 												<li>Редакторская подготовка изданий</li>
 												<li>Мультимедийные технологии в издательском деле</li>
-												<li>Работать в разных компьютерных программах (Adobe, Microsoft)</li>
+												<li>Работа в разных компьютерных программах (Adobe, Microsoft)</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
 											<h3>2 - Редактура</h3>
 											<ul>
-												<li>Создание SEO-текстов</li>												<li>Основы создания веб-сайтов</li>
+												<li>Создание SEO-текстов</li>												
 												<li>Правила написания статей и материалов, выполнения рерайта, копирайта</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
 											<h3>3 - Дизайн</h3>
 											<ul>
-												<li>Создание векторной графики</li>												<li>Основы создания веб-сайтов</li>
+												<li>Создание векторной графики</li>												
 												<li>Подготовка видео- и аудиопродукта, базовые навыки в съемке и монтаже</li>
+												<li>Основы создания веб-сайтов</li>
 											</ul>
 										</div>
 									</div>
-									
+									<div class="one-forth services-img" style="background-image: url(images/services-img-1.jpg);">
+							м               </div>
 									</div>
 								</div>
 							</div>
