--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 							<a href="work.html" class="work-img" style="background-image: url(images/work-3.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Ароматерапия: ароматы и масла</h2>
+										<h2>Ароматы и масла исцеляющие и омолаживающие</h2>
 									</div>
 								</div>
 							</a>							
@@ -272,7 +272,7 @@
 							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Океаны</h2>
+										<h2>Мировой океан</h2>
 									</div>
 								</div>
 							</a>							
@@ -404,10 +404,8 @@
 								<div class="col-md-10">
 									<h2>Давайте поговорим</h2>
 									<p>A small river named Duden flows by their place and supplies.</p>
-									<p><a href="#">noah@info.com</a></p>
+									<p><a href="#">lyubov.v2104@gmail.com</a></p>
 									<p class="colorlib-social-icons">
-										<a href="#"><i class="icon-facebook4"></i></a>
-										<a href="#"><i class="icon-twitter3"></i></a>
 										<a href="#"><i class="icon-googleplus"></i></a>
 										<a href="#"><i class="icon-dribbble2"></i></a>
 									</p>
@@ -415,7 +413,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 col-pb-sm">
-							<h2>Latest Blog</h2>
+							<h2>Блог</h2>
 							<div class="f-entry">
 								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
 								<div class="desc">
@@ -443,8 +441,8 @@
 							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
 							<div class="subscribe text-center">
 								<div class="form-group">
-									<input type="text" class="form-control text-center" placeholder="Enter Email address">
-									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
+									<input type="text" class="form-control text-center" placeholder="Напишите адрес своей почты">
+									<input type="submit" value="Подписаться" class="btn btn-primary btn-custom">
 								</div>
 							</div>
 						</div>
