--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -78,16 +79,16 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h2 class="head-title">Работы</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
+						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
+						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
+						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
 					</div>
@@ -231,7 +232,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-1.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-1-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Книга о вкусной и здоровой пище</h2>
@@ -246,7 +247,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-2.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-2-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Внешнее оформление</h2>
@@ -257,7 +258,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-3.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-3-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Ароматы и масла исцеляющие и омолаживающие</h2>
@@ -268,7 +269,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-4-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Мировой океан</h2>
