--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h2 class="head-title">Работы</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1-1.jpg);">
+						<a href="images/work-1-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2-1.jpg);">
+						<a href="images/work-2-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3-1.jpg);">
+						<a href="images/work-3-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4-1.jpg);">
+						<a href="images/work-4-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
 					</div>
@@ -122,7 +122,7 @@
 								<img class="img-responsive about-img" src="images/about.jpg" alt="html5 bootstrap template by colorlib.com">
 							</div>
 							<div class="item">
-								<img class="img-responsive about-img" src="images/about-2.jpg" alt="html5 bootstrap template by colorlib.com">
+								<img class="img-responsive about-img" src="images/about-2-1.jpg" alt="html5 bootstrap template by colorlib.com">
 							</div>
 						</div>
 					</div>
