--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-1-1.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-1.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Книга о вкусной и здоровой пище</h2>
@@ -247,7 +247,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-2-1.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-2.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Внешнее оформление</h2>
@@ -258,7 +258,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-3-1.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-3.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Ароматы и масла исцеляющие и омолаживающие</h2>
@@ -269,7 +269,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-4-1.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Мировой океан</h2>
