--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -78,7 +77,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="head-title">Работы</h2>
+						<h2 class="head-title">Works</h2>
 						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
@@ -95,8 +94,7 @@
 				</div>
 			</div>
 		</div>
-	</nav>
-	
+	</nav>	
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
@@ -113,7 +111,7 @@
 		<div id="colorlib-about">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Обо мне</h2>
+					<h2 class="bold">About</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-5 animate-box">
